--- a/projects/style.css
+++ b/projects/style.css
@@ -6,9 +6,14 @@
   padding: 0;
   box-sizing: border-box;
   text-decoration: none;
-  outline: none; border: none;
+  outline: none;
+  border: none;
   text-transform:capitalize;
   transition: all .2s linear;
+  -webkit-transition: all .2s linear;
+  -moz-transition: all .2s linear;
+  -ms-transition: all .2s linear;
+  -o-transition: all .2s linear;
 }
 html{
   font-size: 62.5%;
@@ -200,9 +205,10 @@ header .navbar ul li a:hover{
   flex-wrap: wrap;
   gap:1.5rem;
   margin: 2rem;
+  justify-content: center;
 }
 .work .box-container .box{
-  flex:1 1 30rem;
+  flex: 0 1 30rem;
   border-radius: .5rem;
   box-shadow: 0 .7rem 1rem rgba(0,0,0,.3);
   position: relative;
